# PracticesGit

./: .clang-format  CMakeLists.txt
Core/: CMakeLists.txt
Core/Practice/: CMakeLists.txt
Core/Practice/Includes/: Main.hpp
Core/Practice/Sources/: Main.cpp
Libraries/: CMakeLists.txt
Libraries/ExtensionMethods/: CMakeLists.txt
Libraries/ExtensionMethods/Includes/: ExtensionMethod.hpp
Libraries/HtmlBuilder/: CMakeLists.txt
Libraries/HtmlBuilder/Includes/: Attribute.hpp  Document.hpp  Element.hpp  Html.hpp
Libraries/HtmlBuilder/Sources/: Element.cpp
Libraries/StringConvert/: CMakeLists.txt
Modules/: Expresions.cmake  Functions.cmake
Modules/InputFiles/: GeneratorInputFile.cmake
Tests/: CMakeLists.txt
Tests/Core/: CMakeLists.txt
Tests/Libraries/: CMakeLists.txt
